@@ -1,5 +1,6 @@
 V.Next
 ----------
+- [MINOR] Logging performance speedup, removal of IDetailedLoggerCallback/logDiscarded (#1836)
 - [PATCH] Swallow unbound service exceptions on disconnect. (#1824)
 - [MINOR] Bumped MSAL Broker Protocol Version to 10.0. (#1829)
 - [MINOR] Add implementation for clearAll method to BrokerOAuth2TokenCache to clear all the credentials and metadata (#1823)
